--- a/Teste mktNOW/css/styles.css
+++ b/Teste mktNOW/css/styles.css
@@ -10,6 +10,7 @@ body {
     font-family: sans-serif;
 }
 
+
 .first-section {
     text-transform: uppercase;
     font-size: 18px;
@@ -24,9 +25,9 @@ body {
 
 .second-section-table {
     width: 95%;
-    margin: auto;
     text-align: center;
     align-items: center;
+    margin: auto;
 }
 
 .second-section-table i {
@@ -36,8 +37,13 @@ body {
     color: red;
 }
 
+.second-section-table tbody tr {
+    justify-content: space-between;
+}
+
 .second-section-table th {
-    padding: 3px;
+    padding: 4px;
+    align-content: center;
 }
 
 .second-section-table a {
@@ -49,15 +55,16 @@ body {
     text-decoration: none;
 }
 
-.second-section-table tbody {
+.second-section-table tbody tr {
     border: 1px solid rgba(138, 138, 138, 0.9);
     text-align: left;
 }
 
 .second-section-table tbody td {
-    font-size: 15px;
-    font-weight: 700;
+    font-size: 14px;
+    font-weight: 600;
     text-transform: uppercase;
+    padding: 10px 0 12px 10px;
 }
 
 .second-section-table tbody td p {
@@ -92,7 +99,7 @@ body {
     background-color: black;
     z-index: 10;
     background-image: linear-gradient(to left, grey, black);
-    background-size: 300%;
+    background-size: 400%;
     background-position: left;
     transition: background-position 1s;
 }
